fix: Implemented Aakash Verma's feedback of adding an overflow:hidden to the main class

--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,7 @@ main {
     width: 90%;
     min-width: 327px;
     max-width: 350px; 
+    overflow: hidden;
 }
 
 h1 {
